--- a/C971/MainPage.xaml
+++ b/C971/MainPage.xaml
@@ -5,31 +5,37 @@
 
     <ScrollView>
         <VerticalStackLayout
+            FlexLayout.AlignSelf="Center"
             Padding="30,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+            <HorizontalStackLayout>
+                <Image
+                    Source="userprofile.png"
+                    HeightRequest="100"
+                    FlexLayout.AlignSelf="Center"
+                    Aspect="AspectFit"
+                    SemanticProperties.Description="dot net bot in a race car number eight" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+                <Label
+                    Text="Welcome, Student!"
+                    SemanticProperties.HeadingLevel="Level1" 
+                    FlexLayout.AlignSelf="Center" />
+            </HorizontalStackLayout>
+            <CollectionView ItemsSource="{Binding Terms}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame Margin="10" BackgroundColor="LightSlateGray">
+                            <Grid ColumnDefinitions="Auto,*,Auto,Auto" RowDefinitions="Auto,Auto">
+                                <Label Grid.Column="1" Text="{Binding TermTitle}" />
+                                <DatePicker Grid.Column="2" Grid.Row="0" Date="{Binding StartDate}" />
+                                <DatePicker Grid.Column="3" Grid.Row="0" Date="{Binding EndDate}" />
+                            </Grid>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
 
