--- a/C971/MainPage.xaml
+++ b/C971/MainPage.xaml
@@ -30,6 +30,7 @@
                                 <Label Grid.Column="1" Text="{Binding TermTitle}" />
                                 <DatePicker Grid.Column="2" Grid.Row="0" Date="{Binding StartDate}" />
                                 <DatePicker Grid.Column="3" Grid.Row="0" Date="{Binding EndDate}" />
+                                <Button Clicked="DetailedTermButton_Clicked" x:Name="DetailedTermButton" Text="Go to Courses" TextColor="Black"  Grid.Column="4" Grid.Row="2"></Button>
                             </Grid>
                         </Frame>
                     </DataTemplate>
