--- a/C971/CourseDetailPage.xaml
+++ b/C971/CourseDetailPage.xaml
@@ -4,26 +4,39 @@
              x:Class="C971.CourseDetailPage"
              Title="Course Details">
 
-    <Grid Padding="20" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto"
+    <Grid Padding="20" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto"
           ColumnDefinitions="Auto,*">
 
         <Label Grid.Row="0" Grid.Column="0" Text="Course Title:" FontAttributes="Bold" />
-        <Label Grid.Row="0" Grid.Column="1" Text="{Binding CourseTitle}" />
+        <Label Grid.Row="0" Grid.Column="1" Text="{Binding Course.CourseTitle}" />
 
         <Label Grid.Row="1" Grid.Column="0" Text="Start Date:" FontAttributes="Bold" />
-        <Label Grid.Row="1" Grid.Column="1" Text="{Binding StartDate, StringFormat='{}{0:MMMM dd, yyyy}'}" />
+        <Label Grid.Row="1" Grid.Column="1" Text="{Binding Course.StartDate, StringFormat='{}{0:MMMM dd, yyyy}'}" />
 
         <Label Grid.Row="2" Grid.Column="0" Text="End Date:" FontAttributes="Bold" />
-        <Label Grid.Row="2" Grid.Column="1" Text="{Binding EndDate, StringFormat='{}{0:MMMM dd, yyyy}'}" />
+        <Label Grid.Row="2" Grid.Column="1" Text="{Binding Course.EndDate, StringFormat='{}{0:MMMM dd, yyyy}'}" />
 
         <Label Grid.Row="3" Grid.Column="0" Text="Status:" FontAttributes="Bold" />
-        <Label Grid.Row="3" Grid.Column="1" Text="{Binding Status}" />
+        <Label Grid.Row="3" Grid.Column="1" Text="{Binding Course.Status}" />
 
-        <Label Grid.Row="4" Grid.Column="0" Text="Instructor Id:" FontAttributes="Bold" />
-        <Label Grid.Row="4" Grid.Column="1" Text="{Binding InstructorId}" />
+        <Label Grid.Row="4" Grid.Column="0" Text="Instructor Name:" FontAttributes="Bold" />
+        <Label Grid.Row="4" Grid.Column="1" Text="{Binding Instructor.InstructorName}" />
 
-        <Label Grid.Row="5" Grid.Column="0" Text="Notes:" FontAttributes="Bold" />
-        <Label Grid.Row="5" Grid.Column="1" Text="{Binding Notes}" />
+        <Label Grid.Row="5" Grid.Column="0" Text="Instructor Email:" FontAttributes="Bold" />
+        <Label Grid.Row="5" Grid.Column="1" Text="{Binding Instructor.InstructorEmail}" />
 
+        <Label Grid.Row="6" Grid.Column="0" Text="Instructor Phone Number:" FontAttributes="Bold" />
+        <Label Grid.Row="6" Grid.Column="1" Text="{Binding Instructor.InstructorPhone}" />
+
+        <Label Grid.Row="8" Grid.Column="0" Text="Notes:" FontAttributes="Bold" />
+        <Label Grid.Row="8" Grid.Column="1" Text="{Binding Notes}" />
+        <Button Clicked="AssesmentInfoButton_Clicked" x:Name="AssesmentInfoButton" Text="Course Assessments" TextColor="Black" Grid.Row="8" Grid.Column="1">
+
+        </Button>
+        <Button Clicked="EditCourseInfoButton_Clicked" x:Name="EditCourseInfoButton" Text="Edit this course" TextColor="Black" Grid.Row="8" Grid.Column="1">
+
+        </Button>
     </Grid>
+
+
 </ContentPage>
