--- a/C971/Resources/Styles/Colors.xaml
+++ b/C971/Resources/Styles/Colors.xaml
@@ -6,7 +6,7 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
-    <Color x:Key="Primary">#ffffff</Color>
+    <Color x:Key="Primary">#327DA9</Color>
     <Color x:Key="PrimaryDark">#003057</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
     <Color x:Key="Secondary">#327DA9</Color>
