--- a/C971/TermDetailPage.xaml
+++ b/C971/TermDetailPage.xaml
@@ -4,31 +4,50 @@
              x:Class="C971.TermDetailPage"
              Title="Term Details">
 
-    <StackLayout Padding="20">
-        <Label Text="Term Title:" FontSize="Large" />
-        <Label Text="{Binding Term.TermTitle}" FontSize="Medium" />
+    <ScrollView VerticalOptions="FillAndExpand">
 
-        <Label Text="Start Date:" FontSize="Large" />
-        <Label Text="{Binding Term.StartDate, StringFormat='{}{0:MMMM dd, yyyy}'}" FontSize="Medium" />
 
-        <Label Text="End Date:" FontSize="Large" />
-        <Label Text="{Binding Term.EndDate, StringFormat='{}{0:MMMM dd, yyyy}'}" FontSize="Medium" />
 
-        <Label Text="Courses:" FontSize="Large" />
-        <CollectionView ItemsSource="{Binding Courses}">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Frame Margin="10" BackgroundColor="LightSlateGray">
-                        <Grid ColumnDefinitions="Auto,*,Auto,Auto" RowDefinitions="Auto,Auto">
-                            <Label Grid.Column="1" Text="{Binding CourseTitle}" />
-                            <DatePicker Grid.Column="2" Grid.Row="0" Date="{Binding StartDate}" />
-                            <DatePicker Grid.Column="3" Grid.Row="0" Date="{Binding EndDate}" />
-                            <Button Clicked="DetailedCourseButton_Clicked" x:Name="DetailedCourseButton" Text="More Info" TextColor="Black"  Grid.Column="4" Grid.Row="2"></Button>
+        <VerticalStackLayout Padding="20" Spacing="10">
 
-                        </Grid>
-                    </Frame>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </StackLayout>
+            <HorizontalStackLayout Spacing="15">
+                <Label Text="Term Title:" FontSize="Large"   />
+                <Label Text="{Binding Term.TermTitle}" FontSize="Medium"  />
+            </HorizontalStackLayout>
+            <HorizontalStackLayout Spacing="15" >
+                <Label Text="Start Date:" FontSize="Large" />
+                <Label Text="{Binding Term.StartDate, StringFormat='{}{0:MMMM dd, yyyy}'}" FontSize="Medium" />
+
+            </HorizontalStackLayout>
+
+            <HorizontalStackLayout Spacing="15">
+                <Label Text="End Date:" FontSize="Large" />
+                <Label Text="{Binding Term.EndDate, StringFormat='{}{0:MMMM dd, yyyy}'}" FontSize="Medium" />
+            </HorizontalStackLayout>
+            
+
+            <Label Text="Courses:" FontSize="Large" />
+            <CollectionView ItemsSource="{Binding Courses}" HeightRequest="300">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame Margin="0,5" BackgroundColor="LightSlateGray">
+                            <Grid ColumnDefinitions="*,Auto,Auto" RowDefinitions="Auto,Auto,Auto" RowSpacing="5">
+                                <Label Grid.ColumnSpan="3" Text="{Binding CourseTitle}" FontSize="Medium" />
+                                <Label Grid.Row="1" Grid.Column="0" Text="Start:" FontSize="Small" />
+                                <DatePicker Grid.Row="1" Grid.Column="1" Date="{Binding StartDate}" FontSize="Small" />
+                                <Label Grid.Row="2" Grid.Column="0" Text="End:" FontSize="Small" />
+                                <DatePicker Grid.Row="2" Grid.Column="1" Date="{Binding EndDate}" FontSize="Small" />
+                                <Button Grid.Row="1" Grid.Column="2" Grid.RowSpan="2" 
+                                        Clicked="DetailedCourseButton_Clicked" 
+                                        Text="More Info" 
+                                        TextColor="Black" 
+                                        VerticalOptions="Center" />
+                            </Grid>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            <Button Text="Edit Courses" TextColor="Black" BackgroundColor="Red" Margin="0,10,0,0" />
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
