Testing and Debugging prior to submission

--- a/C971/AddTermPage.xaml
+++ b/C971/AddTermPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="C971.AddTermPage"
-             Title="AddTermPage">
+             Title="Add Term">
 
     <Grid Padding="20"
           RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto"
