--- a/C971/AddCoursePage.xaml
+++ b/C971/AddCoursePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="C971.AddCoursePage"
-             Title="AddCoursePage">
+             Title="Add Course">
     <Grid Padding="20"
           RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto"
           ColumnDefinitions="Auto,*,Auto"
