--- a/C971/EditAssessmentPage.xaml
+++ b/C971/EditAssessmentPage.xaml
@@ -77,6 +77,14 @@
                    HeightRequest="20"
                    WidthRequest="20"
                    VerticalOptions="Center" />
+            <Button Grid.Row="7"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="3"
+                    Text="Delete Course"
+                    BackgroundColor="Red"
+                    TextColor="White"
+                    Clicked="OnDeleteButtonClicked"
+                    Margin="0,10,0,0" />
             <Button Grid.Row="6"
                     Grid.Column="0"
                     Grid.ColumnSpan="3"
