--- a/C971/EditCoursePage.xaml
+++ b/C971/EditCoursePage.xaml
@@ -155,8 +155,9 @@
         <Button Grid.Row="11"
                 Grid.Column="0"
                 Grid.ColumnSpan="3"
-                Text="Delete Term"
-                TextColor="Red"
+                Text="Delete Course"
+                BackgroundColor="Red"
+                TextColor="White"
                 Clicked="OnDeleteCourseClicked"
                 Margin="0,10,0,0" />
         <Button Grid.Row="12"
