--- a/C971/EditTermsPage.xaml
+++ b/C971/EditTermsPage.xaml
@@ -28,7 +28,8 @@
                             VerticalOptions="Center" />
             </HorizontalStackLayout>
             <Button Text="Delete Term"
-                    TextColor="Red"
+                    BackgroundColor="Red"
+                    TextColor="White"
                     Clicked="OnDeleteTermClicked"
                     Margin="0,10,0,0" />
             <Button Text="Save Changes"
